force-app/main/default/objects/Candidate__c/fields/CME_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>CME_Compliance_Status__c</fullName>
    <formula>IF(
            Required_CME_Credits__c = 0,
            &quot;N/A&quot;,
            IF(
                Total_CME_Credits_Earned__c &gt;= Required_CME_Credits__c,
                &quot;Compliant&quot;,
                &quot;Deficient&quot;
            )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CME Compliance Status</label>
    <type>Text</type>
</CustomField>