force-app/main/default/objects/Candidate__c/fields/Converted_To_Employee_On__c.field-meta.xml
<CustomField>
    <fullName>Converted_To_Employee_On__c</fullName>
    <label>Converted To Employee On</label>
    <type>DateTime</type>
</CustomField>