force-app/main/default/objects/Candidate__c/fields/Current_Journey_Path__c.field-meta.xml
<CustomField>
    <fullName>Current_Journey_Path__c</fullName>
    <label>Current_Journey_Path</label>
    <length>100</length>
    <type>Text</type>
</CustomField>