force-app/main/default/objects/Candidate__c/fields/Current_Onboarding_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Onboarding_Step__c</fullName>
    <label>Current_Onboarding_Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>