force-app/main/default/objects/Candidate__c/fields/Email_As_Per_Resume__c.field-meta.xml
<CustomField>
    <fullName>Email_As_Per_Resume__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email As Per Resume</label>
    <type>Email</type>
</CustomField>