force-app/main/default/objects/Candidate__c/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emergency_Contact_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>