force-app/main/default/objects/Candidate__c/fields/Face_Token_Status__c.field-meta.xml
<CustomField>
    <fullName>Face_Token_Status__c</fullName>
    <label>Face Token Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>