force-app/main/default/objects/Candidate__c/fields/First_Login__c.field-meta.xml
<CustomField>
    <fullName>First_Login__c</fullName>
    <defaultValue>true</defaultValue>
    <label>First Login</label>
    <type>Checkbox</type>
</CustomField>