force-app/main/default/objects/Candidate__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>