force-app/main/default/objects/Candidate__c/fields/Has_Invalid_License__c.field-meta.xml
<CustomField>
    <fullName>Has_Invalid_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Invalid License</label>
    <type>Checkbox</type>
</CustomField>