force-app/main/default/objects/Candidate__c/fields/Has_Override__c.field-meta.xml
<CustomField>
    <fullName>Has_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has_Override</label>
    <type>Checkbox</type>
</CustomField>