force-app/main/default/objects/Candidate__c/fields/Identity_Phase__c.field-meta.xml
<CustomField>
    <fullName>Identity_Phase__c</fullName>
    <label>Identity Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Candidate</fullName><default>true</default><label>Candidate</label></value>
            <value><fullName>Employee External</fullName><default>false</default><label>Employee External</label></value>
            <value><fullName>Employee Internal</fullName><default>false</default><label>Employee Internal</label></value>
            <value><fullName>Hybrid</fullName><default>false</default><label>Hybrid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>