force-app/main/default/objects/Candidate__c/fields/Last_Referral_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Referral_Activity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Referral Activity</label>
    <type>DateTime</type>
</CustomField>