force-app/main/default/objects/Candidate__c/fields/Last_Result_Summary__c.field-meta.xml
<CustomField>
    <fullName>Last_Result_Summary__c</fullName>
    <label>Last_Result_Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>