force-app/main/default/objects/Candidate__c/fields/Last_Screening_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Screening_Date__c</fullName>
    <label>Last_Screening_Date</label>
    <type>DateTime</type>
</CustomField>