force-app/main/default/objects/Candidate__c/fields/Latest_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Latest_Correlation_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest_Correlation_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>