force-app/main/default/objects/Candidate__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>