force-app/main/default/objects/Candidate__c/fields/Name_As_Per_Resume__c.field-meta.xml
<CustomField>
    <fullName>Name_As_Per_Resume__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name as per resume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>