force-app/main/default/objects/Candidate__c/fields/Override_Count__c.field-meta.xml
<CustomField>
    <fullName>Override_Count__c</fullName>
    <label>Override_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>