force-app/main/default/objects/Candidate__c/fields/PHI_Access_Granted__c.field-meta.xml
<CustomField>
    <fullName>PHI_Access_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the candidate has completed all necessary HIPAA compliance steps and is approved for PHI access.</description>
    <label>PHI Access Granted</label>
    <type>Checkbox</type>
</CustomField>