force-app/main/default/objects/Candidate__c/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred_Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>