force-app/main/default/objects/Candidate__c/fields/Profile_Photo_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Photo_Document_Id__c</fullName>
    <description>Stores ContentDocumentId of candidate profile photo</description>
    <label>Profile Photo Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>