force-app/main/default/objects/Candidate__c/fields/Raw_Resume_Payload__c.field-meta.xml
<CustomField>
    <fullName>Raw_Resume_Payload__c</fullName>
    <label>Raw Resume Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>