force-app/main/default/objects/Candidate__c/fields/Referral_Shares__c.field-meta.xml
<CustomField>
    <fullName>Referral_Shares__c</fullName>
    <label>Referral Shares</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>