force-app/main/default/objects/Candidate__c/fields/Registered_At__c.field-meta.xml
<CustomField>
    <fullName>Registered_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registered_At</label>
    <type>DateTime</type>
</CustomField>