force-app/main/default/objects/Candidate__c/fields/RegistrationSource__c.field-meta.xml
<CustomField>
    <fullName>RegistrationSource__c</fullName>
    <label>RegistrationSource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>