force-app/main/default/objects/Candidate__c/fields/Required_CME_Credits__c.field-meta.xml
<CustomField>
    <fullName>Required_CME_Credits__c</fullName>
    <formula>CASE(
            TEXT(Specialty__c),
            &quot;MD&quot;, 50,
            &quot;DO&quot;, 50,
            &quot;NP&quot;, 30,
            &quot;RN&quot;, 20,
            0
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required CME Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>