force-app/main/default/objects/Candidate__c/fields/Resume_parsing_using_ai__c.field-meta.xml
<CustomField>
    <fullName>Resume_parsing_using_ai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resume parsing using ai</label>
    <type>Checkbox</type>
</CustomField>