force-app/main/default/objects/Candidate__c/fields/Resume_Status__c.field-meta.xml
<CustomField>
    <fullName>Resume_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resume Status</label>
    <type>Checkbox</type>
</CustomField>