force-app/main/default/objects/Candidate__c/fields/ResumeParsedStatus__c.field-meta.xml
<CustomField>
    <fullName>ResumeParsedStatus__c</fullName>
    <label>ResumeParsedStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parsing In Progress</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>