force-app/main/default/objects/Candidate__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Primary role of the candidate used for PHI access and compliance rules.</description>
    <label>Primary Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Billing Staff</fullName>
            </value>
            <value>
                <fullName>Medical Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>