force-app/main/default/objects/Candidate__c/fields/Routed_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>Routed_To_Queue__c</fullName>
    <label>Routed_To_Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>