force-app/main/default/objects/Candidate__c/fields/Routing_Date__c.field-meta.xml
<CustomField>
    <fullName>Routing_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Routing_Date</label>
    <type>DateTime</type>
</CustomField>