force-app/main/default/objects/Candidate__c/fields/Routing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Routing_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Routing_Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>