force-app/main/default/objects/Candidate__c/fields/S3_Resume_URL__c.field-meta.xml
<CustomField>
    <fullName>S3_Resume_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>S3_Resume_URL</label>
    <type>Url</type>
</CustomField>