force-app/main/default/objects/Candidate__c/fields/Screening_Status__c.field-meta.xml
<CustomField>
    <fullName>Screening_Status__c</fullName>
    <label>Screening_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Screened</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
            <value>
                <fullName>Routed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>