force-app/main/default/objects/Candidate__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street_Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>