force-app/main/default/objects/Candidate__c/fields/Total_CME_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Total_CME_Credits_Earned__c</fullName>
    <label>Total CME Credits Earned</label>
    <summarizedField>CMERecord__c.Credits_Earned__c</summarizedField>
    <summaryForeignKey>CMERecord__c.Candidate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>