force-app/main/default/objects/Candidate__c/fields/Total_Rules_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Total_Rules_Evaluated__c</fullName>
    <label>Total_Rules_Evaluated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>