force-app/main/default/objects/Candidate__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>