force-app/main/default/objects/Candidate__c/validationRules/Block_Onboarding_For_Invalid_License.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Onboarding_For_Invalid_License</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Merged__c = TRUE ,Has_Invalid_License__c = TRUE)</errorConditionFormula>
    <errorMessage>This Candidate cannot be placed. They have a medical license that is expired, suspended, or could not be found. Please resolve the issue in their license verification record.</errorMessage>
</ValidationRule>