force-app/main/default/objects/Candidate__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Location__c</columns>
    <columns>Phone__c</columns>
    <columns>S3_Resume_URL__c</columns>
    <columns>Skills__c</columns>
    <columns>Specialty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>